fixed layout issues

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -13,6 +13,7 @@ section{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .container {
