--- a/guide/guide.css
+++ b/guide/guide.css
@@ -20,7 +20,7 @@ div{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
+    width: 80vw;
     height: 50vh;
     padding: 20px;
     border-radius: 25px;
